--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -28,6 +28,7 @@
                 android:src="@drawable/star1" />
 
             <TextView
+                android:textSize="12sp"
                 android:id="@+id/starsRecived"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -79,6 +80,7 @@
                 android:src="@drawable/star1" />
 
             <TextView
+                android:textSize="12sp"
                 android:id="@+id/starsSent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
